--- a/css/style.css
+++ b/css/style.css
@@ -79,14 +79,17 @@ header{
       margin-top: 30px; 
     }
       .buttonhead{
-        text-transform: uppercase;
         background-color: #fed45c;
         border-radius: 20px;
-        font-size: 14px;
         width: 300px;
         height: 70px;
         border: none;
         margin-top: 30px;
+      }
+
+       .buttonheadfont{
+        text-transform: uppercase;
+        font-size: 14px;
         font-weight: bold;
       }
 
@@ -120,12 +123,47 @@ header{
 .intro{
   height: 970px;
   background-color: #ffffff;
+  text-align: center;
 }
+
+    .introleft{
+      width: 600px;
+      height: 400px;
+      border: 0.5px solid black;
+      display: inline-block;
+      margin:20px;
+    }
+
+    .introright{
+      width: 600px;
+      height: 400px;
+      border: 0.5px solid black;
+      display: inline-block;
+      margin: 20px;
+    }
+
+    .introdown{
+      width: 1260px;
+      height: 300px;
+      border: 0.5px solid black;
+      margin: 20px 20px 20px 330px;
+    }
 
 .services{
   height: 360px;
   background-color: #fcfcfc;
+  text-align: center;
 }
+
+    .service{
+      width: 400px;
+      height: 250px;
+      display: inline-block;
+      border: 0.5px solid black;
+      margin: 50px 20px;
+    }
+
+
 
 .counter{
   height: 420px;
@@ -139,17 +177,87 @@ header{
 .latest{
   height: 760px;
   background-color: #ffffff;
+  text-align: center;
 }
+
+    .latestup{
+        width: 1250px;
+        height: 150px;
+        border: 0.5px solid black;
+        margin: 20px 20px 20px 330px;
+    }
+
+    .latestleft{
+      width: 600px;
+      height: 450px;
+      border: 0.5px solid black;
+      display: inline-block;
+      margin:20px;
+    }
+
+    .latestright{
+      width: 600px;
+      height: 450px;
+      border: 0.5px solid black;
+      display: inline-block;
+      margin: 20px;
+    }
 
 .news{
   height: 900px;
   background-color: #f6f6f6;
 }
 
+    .newsleft{
+      position: relative;
+      left: 320px;
+      top: 100px;
+      width: 400px;
+      height: 550px;
+      border: 0.5px solid black;
+      margin: 20px;
+    }
+
+    .newsright{
+      position: relative;
+      top: -480px;
+      left: 820px;
+      width: 750px;
+      height: 450px;
+      border: 0.5px solid black;
+      margin: 20px;
+    }
+
+    .newsdown{
+      position: relative;
+      top: -480px;
+      left: 820px;
+      width: 750px;
+      height: 250px;
+      border: 0.5px solid black;
+      margin: 20px;
+    }
+
 .support{
   height: 570px;
   background-color: #ffffff;
+  text-align: center;
 }
+
+    .supportup{
+      width: 1200px;
+      height: 150px;
+      border: 0.5px solid black;
+      margin:20px 20px 20px 350px;
+    }
+
+    .supportdown{
+      width: 350px;
+      height: 350px;
+      border: 0.5px solid black;
+      display: inline-block;
+      margin:20px;
+    }
 
 footer{
   height: 300px;
