--- a/css/style.css
+++ b/css/style.css
@@ -28,9 +28,11 @@ body{
 header{
   height: 920px;
   background-color: #f0689e;
-  background-image: url(../img/bgbannerlayer.png);
+  background-image: url(../img/bgbannerlayer.png),
+                    url(../img/circles.png);
   background-repeat: no-repeat;
   background-position-y: 100%;
+  background-position-x: 70%;
 }
 
     .logotype{
@@ -333,7 +335,53 @@ header{
       height: 550px;
       border: 0.5px solid black;
       margin: 20px;
+      padding: 30px 10px;
+      background-color: white;
+      box-shadow: 0px 0px 25px 2px #C4C4C4;
     }
+
+        .newsleftfont1{
+          font-size: 36px;
+          text-transform: capitalize;
+          padding: 5px;
+        }
+
+        .newsleftfont2{
+          font-size: 18px;
+          color: silver;
+          padding: 5px;
+        }
+
+        .formnews{
+          width: 350px;
+          height: 50px;
+          border: 2xp gray;
+          border-style: solid;
+          border-radius: 10px;
+          color: silver;
+          font-size: 18px;
+          padding-left: 10px;
+          margin: 15px 0;
+        }
+
+        input:focus {
+          background: aquamarine;
+          }
+
+        .buttonnewsleft{
+          background-color: #fed45c;
+          border-radius: 20px;
+          width: 350px;
+          height: 70px;
+          border: none;
+          margin-top: 30px;
+        }
+
+        .buttonnewsleftfont{
+          text-transform: uppercase;
+          font-size: 14px;
+          font-weight: bold;
+        }
 
     .newsright{
       position: relative;
