--- a/css/style.css
+++ b/css/style.css
@@ -651,6 +651,7 @@ header{
         height: 70px;
         border: none;
         margin-top: 30px;
+        cursor: pointer;
       }
 
        .buttonheadfont{
@@ -701,7 +702,6 @@ header{
     .introleft{
       width: 600px;
       height: 440px;
-      border: 0.5px solid black;
       display: inline-block;
       margin:20px;
       vertical-align: top;
@@ -711,7 +711,6 @@ header{
       width: 600px;
       height: 440px;
       background-color: silver;
-      border: 0.5px solid black;
       display: inline-block;
       margin: 20px;
     }
@@ -741,12 +740,12 @@ header{
         border: none;
         margin-top: 15px;
         float: left;
+        cursor: pointer;
       }
 
     .introdown{
       width: 1260px;
       height: 370px;
-      border: 0.5px solid black;
       margin: 20px 20px 20px 330px;
       padding: 10px 100px;
       text-align: center;
@@ -777,7 +776,6 @@ header{
       width: 400px;
       height: 250px;
       display: inline-block;
-      border: 0.5px solid black;
       margin: 50px 20px;
       vertical-align: top;
     }
@@ -857,7 +855,6 @@ header{
     .latestup{
         width: 1250px;
         height: 150px;
-        border: 0.5px solid black;
         margin: 20px 20px 20px 330px;
         text-align: center;
     }
@@ -877,15 +874,85 @@ header{
     .latestleft{
       width: 600px;
       height: 450px;
-      border: 0.5px solid black;
       display: inline-block;
       margin:20px;
+      vertical-align: top;
+
     }
+
+    .latestleft a{
+      color: silver;
+      font-size: 24px;
+      margin-left: 10px;
+      text-decoration: none;
+    }
+
+    .latestleft a:hover{
+      color: #F759C0;
+    }
+
+    .fontlatestleft1{
+      font-size: 30px;
+      padding: 15px;
+      text-transform: uppercase;      
+      text-align: left;
+    }
+
+    .fontlatestleft2{
+      font-size: 20px;
+      padding: 15px;
+      color: silver;    
+      text-align: left;
+    }
+
+    .fontlatestleft3{
+      font-size: 20px;
+      padding: 10px;
+      text-transform: uppercase;  
+      color: silver;    
+      text-align: left;
+    }
+
+    .buttondemo{
+      background-color: white;
+      border-radius: 30px;
+      border: 1px solid gray;
+      width: 200px;
+      height: 70px;
+      margin-top: 30px;
+      cursor: pointer;
+      margin-left: 10px;
+     }
+
+    .buttondemofont{
+      text-transform: uppercase;
+      font-size: 14px;
+      font-weight: bold;
+        }
+
+    .buttonbuy{
+      background-color: #fed45c;
+      border-radius: 30px;
+      width: 200px;
+      height: 70px;
+      border: none;
+      margin-top: 30px;
+      cursor: pointer;
+      margin-left: 10px;
+      }
+
+    .buttonbuyfont{
+      text-transform: uppercase;
+      font-size: 14px;
+      font-weight: bold;
+        }
+
+
 
     .latestright{
       width: 600px;
       height: 450px;
-      border: 0.5px solid black;
+      background-image: url(../img/latestright.png);
       display: inline-block;
       margin: 20px;
     }
@@ -896,13 +963,11 @@ header{
 }
 
     .newsleft{
-      position: relative;
-      left: 320px;
-      top: 100px;
       width: 400px;
       height: 550px;
-      border: 0.5px solid black;
-      margin: 20px;
+      margin-left: 370px;
+      margin-top: 130px;
+      display: inline-block;
       padding: 30px 10px;
       background-color: white;
       box-shadow: 0px 0px 25px 2px #C4C4C4;
@@ -943,6 +1008,7 @@ header{
           height: 70px;
           border: none;
           margin-top: 30px;
+          cursor: pointer;
         }
 
         .buttonnewsleftfont{
@@ -951,24 +1017,51 @@ header{
           font-weight: bold;
         }
 
-    .newsright{
-      position: relative;
-      top: -480px;
-      left: 820px;
-      width: 750px;
-      height: 450px;
-      border: 0.5px solid black;
-      margin: 20px;
-    }
 
     .newsdown{
-      position: relative;
-      top: -480px;
-      left: 820px;
       width: 750px;
-      height: 250px;
-      border: 0.5px solid black;
-      margin: 20px;
+      margin-left: 150px;
+      margin-top: 100px;
+      display: inline-block;
+    }
+
+    .newsdownblock1{
+      width: 350px;
+      height: 330px;
+      margin-right: 30px;
+      background-image: url(../img/newsdownblock1.png);
+      display: inline-block;
+    }
+
+    .newsdownblock2{
+      width: 350px;
+      height: 330px;
+      background-image: url(../img/newsdownblock2.png);
+      display: inline-block;
+    }
+
+    .fontnewsdown1{
+      font-size: 42px;
+      text-transform: capitalize;
+      padding: 15px;
+    }
+
+    .fontnewsdown2{
+      font-size: 24px;
+      color: silver;
+      padding: 15px;
+    }
+
+    .newsdown a{
+      display: block;
+      vertical-align: middle;
+      float: right;
+    }
+
+    hr{
+      color:#F6F5F4;
+      height: 0.5px;
+
     }
 
 .support{
@@ -980,7 +1073,6 @@ header{
     .supportup{
       width: 1200px;
       height: 150px;
-      border: 0.5px solid black;
       margin:20px 20px 20px 350px;
       text-align: center;
     }
@@ -999,11 +1091,8 @@ header{
 
     .supportdown{
       width: 350px;
-      height: 350px;
-      border: 0.5px solid black;
       display: inline-block;
       margin:20px;
-      vertical-align: top;
     }
 
 
@@ -1026,6 +1115,7 @@ header{
           width: 200px;
           height: 70px;
           margin-top: 30px;
+          cursor: pointer;
         }
 
         .buttonforumfont{
@@ -1041,6 +1131,7 @@ header{
           height: 70px;
           border: none;
           margin-top: 30px;
+          cursor: pointer;
       }
 
         .buttonvideo{
@@ -1050,6 +1141,7 @@ header{
           width: 200px;
           height: 70px;
           margin-top: 30px;
+          cursor: pointer;
         }
 
 footer{
