--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,11 @@ body{
     margin: 0 auto;
 }
 
+.active{
+    border-bottom: 1px solid #fb565a;
+}
+
+
 header{
     min-height: 590px;
     background-color: #eeeeee;
@@ -601,15 +606,28 @@ hr{
 /*-------------------------Write Us-----------------------------*/
     .writeusform{
         display: none;
-        position: absolute;
-        top: 130%;
-        left: 30%;
+        position: fixed;
+        top: 20%;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
         width: 760px;
         height: 600px;
         padding: 80px 100px;
         background-color: white;
         box-shadow: 20px 20px 20px 5px gray;
         z-index: 3;
+        animation-name: jump;
+        animation-duration: 0.5s;
+    }
+
+    @keyframes jump{
+        0% {transform: translateY(-2000px);}
+        100% {transform: translateY(0);}
+    }
+
+    .writeusform.show{
+        display: block;
     }
 
     .buttonclose{
@@ -621,6 +639,14 @@ hr{
         font-weight: bold;
         background-color: white;
         cursor: pointer;
+    }
+
+    .buttonclose:hover{
+        color: #fb565a;
+    }
+
+    .buttonclose:active{
+        color: #ffeeee;
     }
 
     .buttonwriteus1{
@@ -850,7 +876,7 @@ footer{
             font-family: Robobto-Regular, Arial, Helvetica, sans-serif;
             font-size: 16px;
             text-transform: uppercase;
-            margin-right: 30px;
+            margin-right: 25px;
             margin-top: 15px;
             margin-bottom: 60px;
             border: none;
@@ -865,8 +891,32 @@ footer{
         height: 170px;
     }
 
+    .wrapgrid{
+        margin-bottom: 15px;
+    }
+
+        .grid input{
+            display: none;
+        }
+
         .grid label{
+            position: relative;
             cursor: pointer;
+            padding-left: 35px;
+        }
+
+        .grid label::before{
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 25px;
+            height: 25px;
+            background: url('../img/radio-off.png');
+            content: '';
+        }
+
+        .grid input:checked + label::before{
+            background: url('../img/radio-on.png');
         }
 
 
@@ -874,6 +924,35 @@ footer{
         width: 100%;
         height: 250px;
     }
+
+    .wrapprop{
+        margin-bottom: 20px;
+    }
+
+    .properties input{
+            display: none;
+        }
+
+        .properties label{
+            position: relative;
+            cursor: pointer;
+            padding-left: 35px;
+        }
+
+        .properties label::before{
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            width: 25px;
+            height: 25px;
+            background: url('../img/checkbox-off.png') no-repeat;
+            content: '';
+        }
+
+        .properties input:checked + label::before{
+            background: url('../img/checkbox-on.png') no-repeat;
+        }
+        
         .fontproperties1{
             font-family: Roboto-Bold, Arial, Helvetica, sans-serif;
             font-size: 18px;
@@ -935,6 +1014,10 @@ footer{
     z-index: -1;
     background: url('../img/browser.png') no-repeat;
 }
+    .shablon:hover{
+        background: url('../img/browserhover.png') no-repeat;
+        box-shadow: 0px 5px 10px 2px #d9d9d9;
+    }
 
     .shablon img{
         position: relative;
