--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ hr{
     .writeusform{
         display: none;
         position: fixed;
-        top: 20%;
+        top: 10%;
         left: 0;
         right: 0;
         margin: 0 auto;
@@ -855,7 +855,7 @@ footer{
         .range{
             width: 100%;
             height: 50px;
-            background-color: #eeeeee;
+            background: url('../img/filter.png') no-repeat;
             text-align: center;
             padding-top: 30px;
         }
@@ -869,7 +869,7 @@ footer{
 
         .pricetext{
             box-sizing: border-box;
-            width: 80px;
+            width: 75px;
             height: 40px;
             background-color: #eeeeee;
             padding: 10px;
